--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     font-family: 'Poppins', sans-serif;
+    margin: 0;
 }
 h1{
     font-size: 50px;
@@ -9,7 +10,6 @@ h1{
 }
 section{
     display: flex;
-    padding-left: 2%;
    
 }
 .image-button{
@@ -17,15 +17,21 @@ section{
     padding: 10px 40px;
     color: white;
     background-image: linear-gradient(orange,tomato);
+    font-weight: 700;
     border-radius: 5px;
 }
 .half-width{
     width: 50%;
+    padding-left: 2%;
 }
 .half-width img{
-    width: 60%;
+    width: 80%;
     border-radius: 50px;
     border-color: red;
-    padding: 20px;
+    padding-left: 20px;
     border-style: dashed;
+}
+.top-banner{
+    background-image: url(images/top-banner.png);
+    background-repeat: no-repeat;
 }
