--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h1{
 .orange-color{
     color: orange;
 }
-section{
+.upper-section{
     display: flex;
     margin-bottom: 50px;
    
@@ -60,4 +60,23 @@ background-image: url(images/dream-bg.png);
 background-repeat: no-repeat;
 background-position:right;
 
+}
+.flexible-container{
+    display: flex;
+}
+.bottom-half-width{
+    width: 40%;
+    padding: 20px;
+    margin-left: 5%;
+    margin-right: 5%;
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+}
+.color-orange{
+    color: orange;
+}
+.bottom-section{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left center;
 }
