--- a/style.css
+++ b/style.css
@@ -28,9 +28,7 @@ h1{
 .half-width img{
     width: 60%;
     border-radius: 50px;
-    border-color: red;
     padding-left: 20px;
-    border-style: dashed;
 }
 .top-banner{
     background-image: url(images/top-banner.png);
@@ -79,4 +77,17 @@ background-position:right;
     background-image: url(images/exp-bg.png);
     background-repeat: no-repeat;
     background-position: left center;
+}
+#dev-1{
+    border-left: 10px solid;
+    border-image: linear-gradient(orange,tomato);
+    border-image-slice: 1;
+}
+#dev-2{
+    border-left: 7px solid;
+    border-image:linear-gradient(blue,cyan);
+    border-image-slice: 1;
+}
+footer p{
+    text-align: center;
 }
